--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Set up CMake
-      uses: actions/setup-cmake@v1
+      uses: jwlawson/actions-setup-cmake@v2
 
     - name: Configure
       run: |
