--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,9 +31,8 @@ jobs:
 
     - name: Create IPA
       run: |
-        find . | sed -e "s/[^-][^\/]*\// |/g" -e "s/|\([^ ]\)/|-\1/"
         mkdir Payload
-        mv BadPiggies.xcarchive/Products/Applications/BadPiggies.app Payload/BadPiggies.app
+        mv Release/BadPiggies.app Payload/BadPiggies.app
 
         zip -r "BadPiggies.ipa" "Payload"
 
