--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,7 +32,7 @@ jobs:
     - name: Create IPA
       run: |
         mkdir Payload
-        mv Release/BadPiggies.app Payload/BadPiggies.app
+        mv build/Release/BadPiggies.app Payload/BadPiggies.app
 
         zip -r "BadPiggies.ipa" "Payload"
 
