--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,6 +32,7 @@ jobs:
     - name: Create IPA
       run: |
         mkdir Payload
+        cp Info.plist build/Release/BadPiggies.app
         mv build/Release/BadPiggies.app Payload/BadPiggies.app
 
         zip -r "BadPiggies.ipa" "Payload"
